超市管理系统

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,8 +52,8 @@ jwt:
   tokenHead: Bearer
 redis:
   host: 127.0.0.1
-  port: 6381
-  password: 123456
+  port: 6379
+  password:
   database: 0
   # 连接超时时间
   timeout: 10000ms
